fixed spacing for book-club-info on book_club_show page

--- a/app/assets/stylesheets/bookclubs.scss
+++ b/app/assets/stylesheets/bookclubs.scss
@@ -47,10 +47,19 @@
   margin-bottom: 10px;
 }
 
-.title h2 {
+.title h2, h4 {
   display: inline-block;
 }
 
 .title a {
   float: right;
+}
+
+.book-club-info {
+  margin-top: 20px;
+}
+
+.book-club-info .cover {
+  margin-bottom: 20px;
+  overflow: hidden;
 }
